--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,19 +1,71 @@
+@font-face {
+  font-family: "Cabinet-Grotesk";
+  src: url("../../vendor/fonts/CabinetGrotesk-Bold.woff") format("woff"),
+    url("../../vendor/fonts/CabinetGrotesk-Bold.woff2") format("woff2");
+}
+
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   min-height: 60px;
-  padding: 0 20px;
+  padding: 0px 40px 0;
+}
+
+.header__info-container {
+  display: flex;
+  gap: 24px;
+  align-items: center;
 }
 
 .header__logo {
+  max-width: 89px;
+  max-height: 40px;
+}
+
+.header__date-city {
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+  line-height: 1.2;
+  color: #000000;
+  font-weight: 700;
+  font-style: normal;
+  font-family: "Cabinet-Grotesk", Arial, Helvetica, sans-serif;
+}
+
+.header__userinfo-container {
   display: flex;
-  gap: 20px;
+  gap: 12px;
   align-items: center;
 }
 
-.header__avatar-logo {
-  display: flex;
+.header__add-button {
   gap: 20px;
-  align-items: center;
+  background-color: #fff;
+  border: none;
+  cursor: pointer;
+  font-size: 20px;
+  line-height: 1.2;
+  font-weight: 700;
+  font-style: normal;
+  font-family: "Cabinet-Grotesk", Arial, Helvetica, sans-serif;
+}
+
+.header__add-button:hover {
+  cursor: pointer;
+  opacity: 0.6;
+}
+
+.header__username {
+  font-size: 20px;
+  line-height: 1.2;
+  font-weight: 700;
+  font-style: normal;
+  font-family: "Cabinet-Grotesk", Arial, Helvetica, sans-serif;
+}
+
+.header__useravatar {
+  width: 40px;
+  height: 40px;
 }
