--- a/src/components/WeatherCard/WeatherCard.css
+++ b/src/components/WeatherCard/WeatherCard.css
@@ -1,14 +1,23 @@
+@font-face {
+  font-family: "Cabinet-Grotesk";
+  src: url("../../vendor/fonts/CabinetGrotesk-Bold.woff") format("woff"),
+    url("../../vendor/fonts/CabinetGrotesk-Bold.woff2") format("woff2");
+}
+
 .weather {
   position: relative;
 }
 
 .weather__info {
   position: absolute;
-  top: 8px;
+  top: 20px;
   left: 16px;
-  color: white;
+  color: #fff;
   font-size: 36px;
   line-height: 1.2;
+  font-weight: 700;
+  font-style: normal;
+  font-family: "Cabinet-Grotesk", Arial, Helvetica, sans-serif;
 }
 
 .weather__image {
