--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,1 +1,70 @@
+@font-face {
+  font-family: "Cabinet-Grotesk";
+  src: url("../vendor/fonts/CabinetGrotesk-Bold.woff") format("woff"),
+    url("../vendor/fonts/CabinetGrotesk-Bold.woff2") format("woff2");
+}
 
+/* .modal__label {
+  color: #000000;
+  font-family: "Cabinet-Grotesk", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.2;
+} */
+
+.modal__input {
+  color: #000000;
+  font-family: "Cabinet-Grotesk", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.2;
+  border: none;
+  border-bottom: 1px solid #000;
+  width: 100%;
+  padding-top: 8px;
+  padding-bottom: 4px;
+  margin-bottom: 24px;
+}
+
+.modal__input::placeholder {
+  color: rgba(0, 0, 0, 0.5);
+  font-family: "Cabinet-Grotesk", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.2;
+}
+
+.modal__weather-prompter {
+  margin-bottom: 12px;
+}
+
+.modal__radio-block {
+  margin-bottom: 40px;
+}
+
+/*On opening form all buttons blanked*/
+.modal__radio-buttons {
+  margin: 0 auto 12px;
+  display: flex;
+  align-items: center;
+}
+
+.modal__radio-buttons label {
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.modal__radio-button {
+  margin-right: 8px;
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  accent-color: #000;
+}
+
+/*On checking radio button fills button and changes label font colour*/
+.modal__radio-buttons input[type="radio"]:checked + label {
+  color: #000;
+}
