--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -1,21 +1,45 @@
-.card_section {
-  margin-top: 20px;
+@font-face {
+  font-family: "Cabinet-Grotesk";
+  src: url("../../vendor/fonts/CabinetGrotesk-Bold.woff") format("woff"),
+    url("../../vendor/fonts/CabinetGrotesk-Bold.woff2") format("woff2");
 }
 
-.card_name {
+.card {
+  position: relative;
   text-align: center;
 }
 
-.card_image {
-  width: 328px;
-  height: 328px;
-  border-radius: 10px;
+.card__name-container {
+  position: absolute;
+  margin-top: 16px;
+  top: 16px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 73px;
+  min-height: 24px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  border-radius: 4px;
 }
 
-.card_items {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: center;
-  margin-top: 20px;
+.card__name {
+  margin: auto;
+  padding: 2px 12px;
+  width: fit-content;
+  color: rgba(0, 0, 0, 0.6);
+  font-family: "Cabinet-Grotesk", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.2;
+}
+
+.card__image {
+  width: 323px;
+  height: 326px;
+  border-radius: 19px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  background: #e9e9e9;
+  cursor: pointer;
 }
