--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
+@import url(/src/vendor/normalize.css);
+@import url(/src/vendor/fonts.css);
+@import url(../src/components/Footer/Footer.css);
+@import url(../src/components/Header/Header.css);
+@import url(../src/components/ItemCard/ItemCard.css);
+@import url(../src/components/ItemModal/ItemModal.css);
+@import url(../src/components/Main/Main.css);
+@import url(../src/components/ModalWithForm/ModalWithForm.css);
+@import url(../src/components/WeatherCard/WeatherCard.css);
+@import url(../src/components/App.css);
+/* ------------------------------------ */
 /* body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: "Cabinet Grotesk", source-code-pro, Menlo, Monaco, Consolas,
+    "Courier New", monospace;
 } */
