--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -18,6 +18,15 @@
   align-items: center;
 }
 
+.header__logo-link {
+  cursor: pointer;
+}
+
+.header__logo-link:hover {
+  cursor: pointer;
+  opacity: 0.6;
+}
+
 .header__logo {
   max-width: 89px;
   max-height: 40px;
@@ -57,12 +66,30 @@
   opacity: 0.6;
 }
 
+.header__userinfo-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  cursor: pointer;
+}
+
+.header__userinfo-link:link {
+  text-decoration: none;
+}
+
+.header__userinfo-link:hover {
+  cursor: pointer;
+  opacity: 0.6;
+}
+
 .header__username {
   font-size: 20px;
   line-height: 1.2;
   font-weight: 700;
   font-style: normal;
   font-family: "Cabinet-Grotesk", Arial, Helvetica, sans-serif;
+  color: #000;
 }
 
 .header__useravatar {
