--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -17,10 +17,8 @@
   transform: translate(-50%, -50%);
   min-width: 73px;
   min-height: 24px;
-  background: #fff;
   display: flex;
   justify-content: center;
-  border-radius: 4px;
 }
 
 .card__name {
@@ -33,6 +31,8 @@
   font-weight: 700;
   font-size: 16px;
   line-height: 1.2;
+  background: #fff;
+  border-radius: 4px;
 }
 
 .card__image {
@@ -42,4 +42,17 @@
   border: 1px solid rgba(0, 0, 0, 0.3);
   background: #e9e9e9;
   cursor: pointer;
+}
+
+.card__like {
+  cursor: pointer;
+  width: 18px;
+  height: 15px;
+  background-color: none;
+  margin: auto 10px;
+}
+
+.card__like:hover {
+  cursor: pointer;
+  opacity: 0.6;
 }
