--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -19,7 +19,7 @@
 .modal__content {
   background-color: #ffffff;
   max-width: 496px;
-  height: 436px;
+  height: fit-content;
   width: 100%;
   border-radius: 20px;
   padding: 34px 28px;
@@ -66,7 +66,7 @@
 }
 
 .modal_submit-button {
-  width: 124px;
+  width: fit-content;
   height: 36px;
   margin-bottom: 36px;
   border-radius: 4px;
