--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -6,10 +6,14 @@
 
 .sidebar {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
   gap: 16px;
 }
 
+.sidebar__profileinfo {
+  display: flex;
+}
 .sidebar__useravatar {
   width: 56px;
   height: 56px;
@@ -17,6 +21,7 @@
 
 .sidebar__username {
   margin: 0;
+  margin-left: 16px;
   padding: 0;
   font-size: 20px;
   line-height: 1.2;
@@ -28,6 +33,7 @@
 
 .sidebar__edit-profile-button {
   margin: 0;
+  margin-top: -24px;
   padding: 0;
   font-size: 20px;
   line-height: 1.2;
