--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -19,8 +19,25 @@
   height: 56px;
 }
 
+.sidebar__useravatar-letter {
+  border-radius: 50%;
+  width: 46px;
+  height: 46px;
+  padding: 5px;
+  background: #fff;
+  border: 3px solid #000;
+  color: #000;
+  text-align: center;
+  font-weight: 700;
+  font-size: 35px;
+  line-height: 1.2;
+  font-style: normal;
+  font-family: "Cabinet-Grotesk", Arial, Helvetica, sans-serif;
+}
+
 .sidebar__username {
   margin: 0;
+  margin-top: 12px;
   margin-left: 16px;
   padding: 0;
   font-size: 20px;
@@ -33,7 +50,7 @@
 
 .sidebar__edit-profile-button {
   margin: 0;
-  margin-top: -24px;
+  margin-top: 0px;
   padding: 0;
   font-size: 20px;
   line-height: 1.2;
@@ -63,6 +80,7 @@
   border: none;
   background-color: #ffff;
   cursor: pointer;
+  margin-bottom: 40px;
 }
 
 .sidebar__edit-logout-button:hover {
