--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -93,14 +93,12 @@
   transition: opacity 0.2s linear;
 }
 
-.modal__switchlink {
-  display: flex;
+.modal__switchlink-login {
   position: relative;
   width: 85px;
   height: 36px;
-  margin-top: -40px;
-  margin-left: 100px;
-  padding: 0;
+  margin-bottom: -45px;
+  left: 90px;
   border: none;
   background-color: white;
   font-family: "Cabinet-Grotesk", Arial, Helvetica, sans-serif;
@@ -110,10 +108,32 @@
   cursor: pointer;
   text-align: center;
   opacity: 0.5;
-  cursor: pointer;
 }
 
-.modal__switchlink:hover {
+.modal__switchlink-login:hover {
+  cursor: pointer;
+  opacity: 0.6;
+  transition: opacity 0.2s linear;
+}
+
+.modal__switchlink-register {
+  position: relative;
+  width: 85px;
+  height: 36px;
+  margin-bottom: -45px;
+  left: 75px;
+  border: none;
+  background-color: white;
+  font-family: "Cabinet-Grotesk", Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.2;
+  cursor: pointer;
+  text-align: center;
+  opacity: 0.5;
+}
+
+.modal__switchlink-register:hover {
   cursor: pointer;
   opacity: 0.6;
   transition: opacity 0.2s linear;
